--- a/04Project/.env
+++ b/04Project/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://rashid:12345@cluster0.8ntoa9r.mongodb.net/mydatabase?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.8ntoa9r.mongodb.net/mydatabase?retryWrites=true&w=majority
